# docs/swagger.json
@@ -32,6 +32,17 @@
             },
             "post": {
                 "description": "ユーザー一覧取得API",
+                "parameters": [
+                    {
+                        "description": "User Create Request",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/controllers.UserCreateRequest"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -42,9 +53,18 @@
                 }
             }
         },
-        "/users/:id": {
+        "/users/{id}": {
             "get": {
                 "description": "ユーザー詳細情報API",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "The key for user",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -57,6 +77,19 @@
         }
     },
     "definitions": {
+        "controllers.UserCreateRequest": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string",
+                    "example": "info@example.com"
+                },
+                "password": {
+                    "type": "string",
+                    "example": "password2021"
+                }
+            }
+        },
         "controllers.UserResponse": {
             "type": "object",
             "properties": {
